pop up private class feature

--- a/pricing.html
+++ b/pricing.html
@@ -306,7 +306,7 @@
                   color: #5fcf80;
                   font-weight: 600;
                   font-family: Poppins, sans-serif;
-                  margin-bottom: 20px;"><sup>₦</sup>64,000<span style="
+                  margin-bottom: 20px;"><sup>₦</sup>96,000<span style="
                   color: #777777;
                   font-size: 16px;
                   font-weight: 300;">/Month</span></li>
@@ -328,7 +328,7 @@
                   color: #5fcf80;
                   font-weight: 600;
                   font-family: Poppins, sans-serif;
-                  margin-bottom: 20px;"><sup>₦</sup>96,000<span style="
+                  margin-bottom: 20px;"><sup>₦</sup>128,000<span style="
                   color: #777777;
                   font-size: 16px;
                   font-weight: 300;">/Month</span></li>
@@ -351,7 +351,7 @@
                   color: #5fcf80;
                   font-weight: 600;
                   font-family: Poppins, sans-serif;
-                  margin-bottom: 20px;"><sup>₦</sup>96,000<span style="
+                  margin-bottom: 20px;"><sup>₦</sup>144,000<span style="
                   color: #777777;
                   font-size: 16px;
                   font-weight: 300;">/Month</span></li>
@@ -373,7 +373,7 @@
                   color: #5fcf80;
                   font-weight: 600;
                   font-family: Poppins, sans-serif;
-                  margin-bottom: 20px;"><sup>₦</sup>144,000<span style="
+                  margin-bottom: 20px;"><sup>₦</sup>192,000<span style="
                   color: #777777;
                   font-size: 16px;
                   font-weight: 300;">/Month</span></li>
@@ -391,7 +391,7 @@
 
          <!-- Begining of more pricing popuo -->
 
-         <button style="border: none; width: 100%; margin-top: 40px; height: 60px;font-size: 100%; " class="button price private-class btn-buy bg-main">Click Here For More Information On Private Classes</button>
+         <button style="border: none; width: 90%; margin-top: 40px; height: 60px;font-size: 100%; margin-left: 5%;" class="button price private-class btn-buy bg-main">Click Here For More Information On Private Classes</button>
 
            
          <div style="width: 100%;" id="privateClass" class="hidden private-container">
